--- a/common/common.scss
+++ b/common/common.scss
@@ -24,7 +24,8 @@
   }
 
   #reply-control.open,
-  .extra-info-wrapper {
+  .extra-info-wrapper,
+  .video-placeholder-container {
     filter: grayscale(1);
   }
 
