--- a/common/common.scss
+++ b/common/common.scss
@@ -44,7 +44,7 @@
 
   .header-sidebar-toggle,
   .home-logo-wrapper-outlet,
-  .d-header-icons .header-dropdown-toggle {
+  .d-header-icons {
     opacity: 0.05;
   }
 
