--- a/common/common.scss
+++ b/common/common.scss
@@ -62,7 +62,11 @@
     opacity: 0;
   }
 
-  #reply-control.open,
+  .discourse-reactions-counter {
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+
   .extra-info-wrapper,
   .video-placeholder-container {
     filter: grayscale(1);
@@ -84,18 +88,17 @@
     opacity: 0.05;
   }
 
-  .posts-wrapper img {
-    filter: grayscale(1);
-  }
-
   .discourse-reactions-reaction-button {
     filter: grayscale(1);
   }
 
   .post-notice,
-  .time-gap.small-action,
-  .topic-map {
+  .time-gap.small-action {
     opacity: 0;
+  }
+
+  .topic-map {
+    opacity: 0.5;
   }
 
   .container.posts .topic-navigation {
@@ -110,6 +113,12 @@
 
   .reader-mode-toggle.active svg {
     color: var(--tertiary);
+  }
+
+  .topic-avatar img {
+    opacity: 0.125;
+    transition: opacity 0.3s;
+    filter: grayscale(1);
   }
 
   #post_1 .topic-body,
