--- a/common/common.scss
+++ b/common/common.scss
@@ -199,7 +199,8 @@
     p,
     span,
     ul li,
-    ol li {
+    ol li,
+    table {
       font-size: var(--reader-mode-font-size) !important;
     }
     h1 {
