--- a/common/common.scss
+++ b/common/common.scss
@@ -174,9 +174,36 @@
   .topic-admin-menu-button-container {
     display: none;
   }
-  .reader-mode-options-trigger {
+  .reader-mode-options-trigger,
+  .reader-mode-options__item-button {
     opacity: 1 !important;
     position: relative;
+  }
+  .reader-mode-options__item-button[disabled],
+  .reader-mode-options__item-button:disabled {
+    opacity: 0.5 !important;
+  }
+  .reader-mode-options__item-button {
+    svg {
+      color: var(--primary-medium);
+    }
+    &.increase-font {
+      svg {
+        transform: scale(1.25);
+      }
+    }
+    &.decrease-font {
+      align-items: end;
+      svg {
+        // transform: scale(0.75);
+        font-size: var(--font-down-1-rem);
+      }
+    }
+    &.decrease-width {
+      svg {
+        transform: rotate(45deg);
+      }
+    }
   }
 
   // Post Width Stuff
@@ -203,30 +230,39 @@
     ol li,
     table {
       font-size: var(--reader-mode-font-size) !important;
+      font-family: var(--reader-mode-font-family) !important;
     }
     h1 {
       font-size: var(--reader-mode-h1-font-size) !important;
+      font-family: var(--reader-mode-font-family) !important;
     }
     h2 {
       font-size: var(--reader-mode-h2-font-size) !important;
+      font-family: var(--reader-mode-font-family) !important;
     }
     h3 {
       font-size: var(--reader-mode-h3-font-size) !important;
+      font-family: var(--reader-mode-font-family) !important;
     }
     h4 {
       font-size: var(--reader-mode-h4-font-size) !important;
+      font-family: var(--reader-mode-font-family) !important;
     }
     h5 {
       font-size: var(--reader-mode-h5-font-size) !important;
+      font-family: var(--reader-mode-font-family) !important;
     }
     h6 {
       font-size: var(--reader-mode-h6-font-size) !important;
+      font-family: var(--reader-mode-font-family) !important;
     }
     small {
       font-size: var(--reader-mode-small-font-size) !important;
+      font-family: var(--reader-mode-font-family) !important;
     }
     big {
       font-size: var(--reader-mode-big-font-size) !important;
+      font-family: var(--reader-mode-font-family) !important;
     }
   }
 }
@@ -262,5 +298,6 @@
   }
   &__section-item select {
     padding: 0.5em;
+    width: min-content;
   }
 }
