--- a/common/common.scss
+++ b/common/common.scss
@@ -228,10 +228,10 @@
       }
     }
     &.light-mode svg {
-      color: #FAFAFA;
+      color: #fafafa;
     }
     &.sepia-mode svg {
-      color: #F5F1E4;
+      color: #f5f1e4;
     }
     &.dark-mode svg {
       color: #202121;
