UX: Remove transitions

--- a/common/common.scss
+++ b/common/common.scss
@@ -29,20 +29,20 @@
   }
 }
 
-#reply-control.open,
-.extra-info-wrapper,
-.video-placeholder-container {
-  transition: filter 0.3s;
-}
+// #reply-control.open,
+// .extra-info-wrapper,
+// .video-placeholder-container {
+//   transition: filter 0.3s;
+// }
 
-.post-notice,
-.time-gap.small-action {
-  transition: height 0.3s, opacity 0.3s;
-}
+// .post-notice,
+// .time-gap.small-action {
+//   transition: height 0.3s, opacity 0.3s;
+// }
 
-.topic-map {
-  transition: height 0.3s, opacity 0.5s;
-}
+// .topic-map {
+//   transition: height 0.3s, opacity 0.5s;
+// }
 
 #post_1 .topic-body,
 #post_1 .topic-avatar {
@@ -54,14 +54,14 @@
   border-top: 1px solid transparent;
 }
 
-.header-sidebar-toggle,
-.home-logo-wrapper-outlet,
-.d-header-icons,
-.timeline-controls .btn:not(.reader-mode-toggle),
-.timeline-scrollarea-wrapper,
-.timeline-footer-controls {
-  transition: opacity 0.3s;
-}
+// .header-sidebar-toggle,
+// .home-logo-wrapper-outlet,
+// .d-header-icons,
+// .timeline-controls .btn:not(.reader-mode-toggle),
+// .timeline-scrollarea-wrapper,
+// .timeline-footer-controls {
+//   transition: opacity 0.3s;
+// }
 
 .reader-mode {
   .d-header {
@@ -94,7 +94,7 @@
 
   .discourse-reactions-counter {
     opacity: 0;
-    transition: opacity 0.3s;
+    // transition: opacity 0.3s;
   }
 
   .extra-info-wrapper,
@@ -159,7 +159,7 @@
   .topic-avatar img,
   .topic-avatar .avatar-flair {
     opacity: 0.125;
-    transition: opacity 0.3s;
+    // transition: opacity 0.3s;
     filter: grayscale(1);
   }
 
